data/all_generated_tests/raw_wast_tests/loop_InfiniteLoops_479.wast
;; 10. **Test Description**: Incorporate a `loop` with incorrect block type transformation where the function type is not valid. This can lead to improper execution and an infinite loop situation.    **Constraint**: Ensuring valid block type transformations as function types.    **Infinite Loop Relevance**: Prevents incorrect block type handling from causing infinite loops.  These tests focus on various aspects of loop management, operand stack validation, label indexing, and control flow instructions to ensure they do not inadvertently lead to infinite loops due to misimplementation.

(assert_invalid
  (module
    (func (result i32)
      (loop (result i32) (call 0))
    )
  )
  "type mismatch"
)